--- a/takeHome/th_ex1/th_ex1.qmd
+++ b/takeHome/th_ex1/th_ex1.qmd
@@ -23,28 +23,43 @@ Population Pyramid helps to visualise the distribution of age and gender for a g
 
 The chart generally have three trends : [^1]
 
-+-----------------------+------------------------------+--------------------------------------------------------------+
-| trend (shape)         | character                    | remarks                                                      |
-+=======================+==============================+==============================================================+
-| Expansive             | -   High fertility rate.     | -   larger percentage of young population.                   |
-|                       |                              |                                                              |
-| (triangle)            | -   High mortality rate.     | -   lower than average life expectancy.                      |
-|                       |                              |                                                              |
-|                       |                              | -   usually associate with developing nation.                |
-+-----------------------+------------------------------+--------------------------------------------------------------+
-| Constrictive          | -   Constant fertility rate. | -   High numbers of middle aged population.                  |
-|                       |                              |                                                              |
-| (wider in the mdidle) | -   Low mortality rate.      | -   Senior population may be larger than younger population. |
-+-----------------------+------------------------------+--------------------------------------------------------------+
-| Stationary            | -   Low fertility rate.      | -   depict stable population.                                |
-|                       |                              |                                                              |
-| ("pillar" )           | -   Low mortality rate.      |                                                              |
-+-----------------------+------------------------------+--------------------------------------------------------------+
++-----------------------+------------------------------+------------------------------------------------------------------------------------------+
+| trend (shape)         | character                    | remarks                                                                                  |
++=======================+==============================+==========================================================================================+
+| Expansive             | -   High fertility rate.     | -   larger percentage of young population.                                               |
+|                       |                              |                                                                                          |
+| (triangle)            | -   High mortality rate.     | -   lower than average life expectancy.                                                  |
+|                       |                              |                                                                                          |
+|                       |                              | -   usually associate with developing nation.                                            |
++-----------------------+------------------------------+------------------------------------------------------------------------------------------+
+| Constrictive          | -   Constant fertility rate. | -   High numbers of middle aged population.                                              |
+|                       |                              |                                                                                          |
+| (wider in the mdidle) | -   Low mortality rate.      | -   Senior population may be larger than younger population.                             |
+|                       |                              |                                                                                          |
+|                       |                              | -   Countries with :                                                                     |
+|                       |                              |                                                                                          |
+|                       |                              |     -   higher levels of social and economic development                                 |
+|                       |                              |                                                                                          |
+|                       |                              |     -   large portion of population can access to quality education and health care.[^2] |
++-----------------------+------------------------------+------------------------------------------------------------------------------------------+
+| Stationary            | -   Low fertility rate.      | -   depict stable population.                                                            |
+|                       |                              |                                                                                          |
+| ("pillar" )           | -   Low mortality rate.      | -   often characteristic of developed nations                                            |
++-----------------------+------------------------------+------------------------------------------------------------------------------------------+
+
+For quick reference of age groups, the labels below are adopted for further discussion.
+
+| range           | label                  |
+|-----------------|------------------------|
+| 45-49 to 65-69  | Baby Boomer Generation |
+| 35-39 to 40-44  | Gen X                  |
+| 25-29 to 30-34  | Gen Y                  |
+| 15-19 to 20 -24 | Gen Z                  |
 :::
 
 [^1]: National Geographic Society. (2022). Population Pyramid. https://education.nationalgeographic.org/resource/population-pyramid
 
-usage to analysts? decision makers?
+[^2]: Boucher L. (2016). What are the Different Types of Population Pyramids? **Population Education**. https://populationeducation.org/what-are-different-types-population-pyramids/
 
 ## **1.1 Instruction**
 
@@ -104,7 +119,7 @@ This study will be based on demographic data set downloadable from [Singstat.gov
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-1** : Click "**File**" from the Tableau Desktop main menu and select "**Open**" from the drop-down options.
+**Step-2.1** : Click "**File**" from the Tableau Desktop main menu and select "**Open**" from the drop-down options.
 :::
 
 ![Figure 2.1](images/image-1671792539.png){fig-alt="To upload data into Tableau Desktop, first click on \"File\" from the main menu." fig-align="left" width="400"}
@@ -118,10 +133,10 @@ Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, 
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2** : Select "**respopagesextod2022**" when prompted by an "**Open**" window.
+**Step-2.2** : Select "**respopagesextod2022**" when prompted by an "**Open**" window.
 :::
 
-![Figure 2.3 Screen-look when loaded with data.](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." fig-align="left" width="400"}
+![Figure 2.3](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." fig-align="left" width="400"}
 :::
 
 ## **2.2 Wrangle Data**
@@ -130,25 +145,25 @@ Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, 
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3 : Click on the inverted triangle icon under the "Sex**" field, as highlighted in **Figure 2.3**.
+**Step-2.3 : Click on the inverted triangle icon under the "Sex**" field, as highlighted in **Figure 2.3**.
 :::
 
 ![Figure 2.4](images/image-1398127722.png){fig-alt="To open the input panel for the creation of calculated field." fig-align="left" width="400"}
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-4 : Select "Create Calculated Field...**" from the drop-down options (refers to **Figure 2.4)** to open an input panel, as shown in **Figure 2.5**.
-:::
+**Step-2.4 : Select "Create Calculated Field...**" from the drop-down options (refers to **Figure 2.4)** to open an input panel, as shown in **Figure 2.5**.
 
 ![Figure 2.5](images/image-726087864.png){fig-alt="User will be prompted with the input panel for the creation of calculated field." fig-align="left" width="400"}
-
-::: {.callout-note appearance="simple" icon="false"}
-**Step-5 :** To create **"Male Population" measured field, first change the field title to** "Male Population". Next, input **"IF \[Sex\] ="Males" THEN \[Pop\] END**", as shown in **Figure 2.6**.
 :::
 
+::: {.callout-note appearance="simple" icon="false"}
+**Step-2.5 :** To create **"Male Population" measured field, first change the field title to** "Male Population". Next, input **"IF \[Sex\] ="Males" THEN \[Pop\] END**", as shown in **Figure 2.6**.
+
 ![Figure 2.6](images/image-1552505160.png){fig-alt="Input title and formula to derive a new calculated field i.e. \"Male Population\"." fig-align="left" width="400"}
+:::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-6 :** Repeat *Step-5* but with title as "**Female Population**", and replace "**Males**" with "**Females**".
+**Step-2.6 :** Repeat *Step-5* but with title as "**Female Population**", and replace "**Males**" with "**Females**".
 :::
 :::
 
@@ -156,97 +171,235 @@ Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, 
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-7 : PA**" field to place it within the "**Rows**" panel, as shown in **Figure 2.7**.
-:::
-
-::: {.callout-note appearance="simple" icon="false"}
-**Step-8** : Double click "**Pop**" field from the table on the left. It will be automatically summed up within the "**Rows**" panel.
-:::
+**Step-2.7 : PA**" field to place it within the "**Rows**" panel, as shown in **Figure 2.7**.
 
 ![Figure 2.7](images/image-1871491101.png){fig-align="left" width="400"}
+:::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-9** : Right click on the space highlighted in red, above the population count column to sort the counts in "**Sort descending**" order. Refer to **Figure 2.8**.
+**Step-2.8** : Double click "**Pop**" field from the table on the left. It will be automatically summed up within the "**Rows**" panel.
 :::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-2.9** : Right click on the space highlighted in red, above the population count column to sort the counts in "**Sort descending**" order. Refer to **Figure 2.8**.
 
 ![Figure 2.8](images/image-1919704893.png){fig-alt="Sum population for each planning area in Singapore." fig-align="left" width="400"}
+:::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-10** : Click the inverted triangle icon (next to "**PA**" at the "**Rows**" pane) and select "**Filter**" to open the "**Filter \[PA\]**" pane.
+**Step-2.10** : Click the inverted triangle icon (next to "**PA**" at the "**Rows**" pane) and select "**Filter**" to open the "**Filter \[PA\]**" pane.
 
 Next, change "**10**" to "**9**" for the "**Top**" value under the **"Top**" tab, as shown in **Figure 2.9**.
-:::
 
 ![Figure 2.9](images/image-690824896.png){fig-align="left" width="400"}
 :::
 
-## **2.4 Plot Population Pyramid Trellis by Planning Area**
-
-::: {.callout-warning appearance="simple" icon="false"}
-![Figure 2.10](images/image-1079669590.png){fig-align="left" width="400"}
+![Figure 2.10](images/image-1079669590.png){alt="Figure 2.10" fig-align="left" width="400"}
 
 Remarks :
 
-| Planning Area | Region     | Col3 |
-|---------------|------------|------|
-| Bedok         | East       |      |
-| Tampines      | East       |      |
-| Jurong West   | West       |      |
-| Sengkang      | North-East |      |
-| Woodlands     | North      |      |
-| Hougang       | North-East |      |
-| Yishun        | North      |      |
-| Choa Chu Kang | West       |      |
-| Punggol       | North-East |      |
+Figure 2.10 shows the filtered Planning Areas.
 
-: Table 2.1 : Details of Top 9 Planning Area
++----------------+-----------------+
+| Planning Area  | Region          |
++================+=================+
+| Bedok          | East            |
++----------------+-----------------+
+| Tampines       | East            |
++----------------+-----------------+
+| Jurong West    | West            |
++----------------+-----------------+
+| Sengkang       | North-East      |
++----------------+-----------------+
+| Woodlands      | North           |
++----------------+-----------------+
+| Hougang        | North-East      |
++----------------+-----------------+
+| Yishun         | North           |
++----------------+-----------------+
+| Choa Chu Kang  | West            |
++----------------+-----------------+
+| Punggol        | North-East      |
++----------------+-----------------+
 
-::: {.callout-note appearance="simple" icon="false"}
-**Step-11** : Select "horizontal bars" from the "Show Me" chart options.
+: Table 2.1 : List of Singapore Region for the top 9 Planning Area.
 :::
 
-![Figure 2.11](images/image-1153609685.png){fig-align="left" width="400"}
+# **3. VISUAL ANALYTICS**
 
-::: {.callout-note appearance="simple" icon="false"}
-**Step-12** : Drag "Gender" to "Color" under "Marks" pane. Next, drag the filtered "PA" to "Columns" and replace the "Rows" field with "Age Group". Thereafter, place "Male Population" and "Female Population" fields to the "Columns". Refers to **Figure 2.11**.
-:::
+## **3.1 Trellis Plot for Population Pyramid**
 
-![Figure 2.12](images/image-1115048381.png){fig-align="left" width="400"}
+This section entails steps for two trellis layout for 9 population pyramids :
 
-::: {.callout-note appearance="simple" icon="false"}
-**Step-13** : Right click the "Male Population" at the x-axis to select "Edit Axis...".
-:::
+-   plot in a row.
 
-![Figure 2.13](images/image-23982472.png){fig-align="left" width="400"}
+-   plot on 3 x 3 matrix.
 
-::: {.callout-note appearance="simple" icon="false"}
-**Step-14** : Tick "Reversed" check box under "Scale" section, as shown in **Figure 2.13**.
-:::
-
-![Figure 2.14](images/image-1174017359.png){fig-alt="Top 9 Highest Singapore Planning Area by Population Count based on June 2022 dataset." fig-align="left" width="400"}
-
-::: {.callout-note appearance="simple" icon="false"}
-**Step-15** : Tick "Show mark label" via "Label" under "Marks" pane.
-:::
-
-![Figure](images/image-1417472999.png){fig-align="left" width="400"}
-
-::: {.callout-note appearance="simple" icon="false"}
-**Step-16** : Right click on the y-axis to add colour to differentiate rows for visual references. Example can be referred to Figure below.
-:::
-
-![Figure :](images/image-744804813.png){width="400"}
-:::
-
-## **2.5 Create Chart to Reveal Gender Differences**
+### 3.1.1 Plot Population Pyramids in a Row
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-17** : Reproduce Figure 2.10.
+**Step-3.1** : Select "horizontal bars" from the "Show Me" chart options.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-18** : Adjust the following fields accordingly :
+**Step-3.2** : Drag "Gender" to "Color" under "Marks" pane. Next, drag the filtered "PA" to "Columns" and replace the "Rows" field with "Age Group". Thereafter, place "Male Population" and "Female Population" fields to the "Columns". Refers to **Figure 3.1**.
+
+![Figure 3.1](images/image-1153609685.png){fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.3** : Right click the "Male Population" at the x-axis to select "Edit Axis...".
+
+![Figure 3.2](images/image-1115048381.png){fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.4** : Tick "Reversed" check box under "Scale" section, as shown in **Figure 3.3**.
+
+![Figure 3.3](images/image-23982472.png){fig-align="left" width="400"}
+:::
+
+![Figure 3.4](images/image-1174017359.png){fig-alt="Top 9 Highest Singapore Planning Area by Population Count based on June 2022 dataset." fig-align="left" width="400"}
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.5** : Tick "Show mark label" via "Label" under "Marks" pane.
+
+![Figure 3.5](images/image-1417472999.png){fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.6** : Right-click the y-axis to add colour to differentiate rows for visual references. The example can be referred to in the figure below.
+
+![Figure 3.6](images/image-744804813.png){width="400"}
+:::
+:::
+
+## 3.1.2 Plot Population Pyramids by 3x3 Matrix
+
+::: {.callout-warning appearance="simple" icon="false"}
+There are 2 parts to this approach :
+
+-   Create a layout matrix that consists of parameter, index, columns and rows fields.
+
+-   Plot chart.
+
+#### 3.1.2.1 create new fields required for the layout matrix
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.7** : Start with a new worksheet. Click the inverted triangle icon from the "Data" pane to select the "Create Parameter..." function, as highlighted in red in **Figure 3.7**.
+
+![Figure 3.7](images/image-299717765.png){fig-alt="Create new parameter by  select the \"Create Parameter...\" option." fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.8** : Create a new parameter with "Total Columns" as the name, "Integer" for the "Data Type", and set "Current Value" to 3 when prompted with the "Create Parameter" pane, as shown in **Figure 3.8**.
+
+![Figure 3.8](images/image-1794749795.png){alt="Figure :" fig-alt="Create an \"Integer\" type new parameter named with \"Total Columns\", and set the \"Current value\" to 3." fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.9** : Select "Create Calculated Field..." from the "Analysis" main menu. Refer to **Figure 3.9**.
+
+![Figure 3.9](images/image-1514198003.png){fig-alt="From the \"Analysis\" main menu, select \"Create Calculated Field...\"" fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.10** : Create calculated fields with the following input :
+
++------------------------------------------------------------+
+| input to create new fields (refer to Figure 3.10)          |
++============================================================+
+| Field Title : **Index**                                    |
+|                                                            |
+| Code : **INT((INDEX())%\[Total Columns\]\^2+1)**           |
++------------------------------------------------------------+
+| Field Title : **Column**                                   |
+|                                                            |
+| Code : **((\[Index\]-1)%\[Total Columns\])+1**             |
++------------------------------------------------------------+
+| Field Title : **Row**                                      |
+|                                                            |
+| Code : **INT((\[Index\]-\[Column\])/\[Total Columns\])+1** |
++------------------------------------------------------------+
+
+![Figure 3.10](images/image-1766035259.png){alt="Figure :" fig-align="left" width="400"}
+:::
+
+#### 3.1.2.2 set the framework for trellis population pyramid
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.11** : Place the following fields accordingly (refers to **Figure 3.11**) :
+
+-   "PA" and "Index" to the "Detail" under "Marks".
+
+-   "Column" to the "Columns" pane.
+
+-   "Row" to the "Rows" pane.
+
+![Figure 3.11](images/image-1748493201.png){fig-alt="Set up the matrix framework before plot the trellis population pyramid." fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.12** : Click the inverted triangle icon next to the "PA" (highlighted in **Figure 3.11**) within the "Marks" pane to select the "Filter..." option.
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.13** : Change the value "10" to "9" and input the following formula "Sum(\[Pop\])", as shown in **Figure 3.12**.
+
+![Figure 3.12](images/image-1006918750.png){alt="Figure :" fig-alt="Filter top 9 Singapore Planning Area by the highest population via formula input." fig-align="left" width="400"}
+
+Note : Can repeat the same step entails under **Step-2.10**. The output will be the same.
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.14** : Change the "Continuous" field to a "Discrete" type. Without this step, Tableau is unable to plot horizontal bar chart without auto-adjust the "Row" to "Columns" pane.
+
+![Figure 3.13](images/image-1610326101.png){alt="Figure :" fig-alt="Change the \"Continuous\" field to a \"Discrete\" type." fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.15** : Select the "PA" option under the "Compute Using" function, as shown in **Figure 3.14**. Do this to both "Column" and "Row" fields.
+
+Once done, 9 blocks will be laid out in the manner of 3 by 3. Refers to **Figure 3.15**.
+
+![Figure 3.14](images/image-1228855018.png){alt="Figure :" fig-alt="Compute the \"Row\" field with \"PA\"" fig-align="left" width="400"}
+
+![Figure 3.15](images/image-1994142143.png){alt="Figure :" fig-alt="9 blocks laid out in the manner of 3 by 3 matrix." fig-align="left" width="400"}
+:::
+
+#### 3.1.2.3 plot trellis population pyramid
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.16** : Place the following fields accordingly (refers to **Figure 3.16**) :
+
+-   "Gender" to the "Color" under "Marks".
+
+-   "Male Population" and "Female Population" to the "Columns" pane.
+
+-   "Age Group" to the "Rows" pane.
+
+Once placed these fields, reversed the "Male Population" as entails under **Step-3.4**.
+
+![Figure 3.16](images/image-184031338.png){alt="Figure :" fig-alt="Plot population pyramid by place the \"gender\" field to \"color\" under \"Marks\", both \"Male Population\" and \"Female Population\" to the \"Columns\"." fig-align="left" width="400"}
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.17** : Un-tick the option "Show Header" for column "Row", as shown in **Figure 3.17**.
+
+![Figure 3.17](images/image-545167032.png){alt="Figure :" fig-alt="Hide \"Row\" column by un-tick the \"Hide Header\" option." fig-align="left" width="400"}
+:::
+:::
+
+## **3.3 Create Chart to Reveal Gender Differences**
+
+::: {.callout-warning appearance="simple" icon="false"}
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.18** : Reproduce Figure 3.10.
+:::
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3.19** : Adjust the following fields accordingly :
 
 -   filtered "PA" from "Rows" to "Columns".
 
@@ -256,11 +409,11 @@ Remarks :
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-19** : Select "circle views" from the "Show Me" chart options and change the "Shape" to "Circle" under "Marks" pane.
+**Step-3.20** : Select "circle views" from the "Show Me" chart options and change the "Shape" to "Circle" under "Marks" pane.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-20** : Update the y-axis via :
+**Step-3.21** : Update the y-axis via :
 
 "Edit Axis..." :
 
@@ -274,47 +427,28 @@ Remarks :
 
 "Format" :
 
--   Set the "Shading" colour under "Default" to your preferred colour.
+-   Set the "Shading" under "Default" to your preferred colour.
 :::
 :::
 
-## **2.6 Create Dashboard for Visual Analytics**
+## **3.4 Create Dashboard for Visual Analytics**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-21** : Set the dashboard's Size to "**Generic Desktop**" and place the population pyramid trellis above and the gender differences chart below at the empty what space.
-:::
+**Step-3-21** : Set the dashboard's Size to "**Generic Desktop**" and place the population pyramid trellis above and the gender differences chart below at the empty what space.
 
-![Figure :](images/image-1054010951.png){fig-align="left" width="400"}
+![Figure 3.18](images/image-1054010951.png){fig-alt="Initiate a new dashboard." fig-align="left" width="400"}
+:::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-22** - Right click the gender differences chart title to hide it.
-:::
+**Step-22** - Right click the gender differences chart title to hide it, as shown in the **Figure 3.19**.
 
-![Figure :](images/image-514407683.png){fig-align="left" width="400"}
+![Figure 3.19](images/image-514407683.png){fig-alt="Hide the title of the chart below that repeating similar context to the chart above." fig-align="left" width="400"}
+:::
 
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-23** - Drag legend to place it below the gender differences chart. Set the "Arrange Items" to "Single Row".
 :::
-:::
-
-# 3. OUTPUT
-
-::: {.callout-warning appearance="simple" icon="false"}
-[![Figure 2.15](images/image-709267252.png){fig-alt="Add population count for each gender to add context of gender differences to the population pyramid."}](https://public.tableau.com/views/SingaporePopulationPyramindJun2022v1_2/Dashboard2?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link)
-
-Remarks :
-
-For more interactive view, find out more from [[my viz on Tableau Public]{.underline}](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_2/Dashboard2?publish=yes).
-
-For quick reference of age groups, the labels below are adopted for further discussion.
-
-| range           | label                  |
-|-----------------|------------------------|
-| 45-49 to 65-69  | Baby Boomer Generation |
-| 35-39 to 40-44  | Gen X                  |
-| 25-29 to 30-34  | Gen Y                  |
-| 15-19 to 20 -24 | Gen Z                  |
 :::
 
 # **4. DISCUSSION**
@@ -322,9 +456,11 @@ For quick reference of age groups, the labels below are adopted for further disc
 ::: {.callout-warning appearance="simple" icon="false"}
 Out of 55 Singapore Planning Areas (PAs) in this study, nine are filtered based on the top 9 highest population count. Then, explore the distribution of age and sex for each PA with the population pyramid.
 
-Only two PAs, namely Bedok and Jurong West, have a predominantly constrictive trend pattern. The rest of the 7 PAs show a mixture of constrictive trends with some form of either expansive or stationary trend.
+![Figure 4.1 : For more interactive view, find out more from [my viz on Tableau Public](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_3/trel3x3_d?publish=yes).](images/image-847043300.png){fig-alt="Comparing 2 types of trellis layout. First is the 9 population pyramid in a row while the second laid out 3 by 3 matrix."}
 
-On the other hand, Punggol area is the only PA showing a mixture of **constrictive trends** with the noticeable **expansive trend** observed below age 30. While the middle-aged group is the largest population, its younger generation population (below age 14) is higher than the age range 15 to 29. This developing township was re-vitalised by the **Punggol 21-plus** plan around the early 2010s that envisioned having 96,000 units when fully developed, attracting Gen-X and older generation, and their descendants contributed to the observed expansive trend, especially those below age 9.[^2]
+Only two PAs, namely Bedok and Jurong West, have a predominantly constrictive trend pattern. Unlike Bedok area, Jurong West may maintain its constrictive trend due to the rental potential to the type of workforce required to support Tuas Megaport. The rest of the 7 PAs show a mixture of constrictive trends with some form of either expansive or stationary trend.
+
+On the other hand, Punggol area is the only PA showing a mixture of **constrictive trends** with the noticeable **expansive trend** observed below age 30. While the middle-aged group is the largest population, its younger generation population (below age 14) is higher than the age ranges 15 to 29. This developing township was re-vitalised by the **Punggol 21-plus** plan around the early 2010s that envisioned having 96,000 units when fully developed, attracting Gen-X and older generation, and their descendants contributed to the observed expansive trend, especially those below age 9.[^3]
 
 Tampines, Sengkang and Yishun are the PAs with "pillar"-like distributions. Unlike Tampines and Yishun, which have a higher Gen Y population, Sengkang has a higher Gen X population.
 
@@ -332,7 +468,7 @@ Tampines, Sengkang and Yishun are the PAs with "pillar"-like distributions. Unli
 
 However, there are a few downsides to the population pyramid. First, it's not easy to visually analyse or identify which PA has a wider gap by gender.
 
-263 words.
+![Figure 4.2 : For more interactive view, find out more from [[my viz on Tableau Public]{.underline}](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_2/Dashboard2?publish=yes){style="font-size: 11pt;"}.](images/image-709267252.png){alt="Figure 2.15" fig-alt="Add population count for each gender to add context of gender differences to the population pyramid."}
 :::
 
-[^2]: Singapore Department of Statistics. (2020). Census of Population 2020 - Statistical Release 2 : Households, Geographic Distribution, Transport and Difficulty in Basic Activities. https://www.parliament.gov.sg/docs/default-source/default-document-library/cop2020sr2.pdf
+[^3]: Singapore Department of Statistics. (2020). Census of Population 2020 - Statistical Release 2 : Households, Geographic Distribution, Transport and Difficulty in Basic Activities. https://www.parliament.gov.sg/docs/default-source/default-document-library/cop2020sr2.pdf
